hard-gists/1646117/run.log
=== Docker Run Log for 1646117 ===
Started at: Mi 29. Okt 12:21:39 CET 2025

[2025-10-29 12:21:39] START: Running container for 1646117
[2025-10-29 12:21:40] SUCCESS: Container 8e49d05960ef93f4e60e203f13f2b06d782d7dc1d40c5427d5211497c4907d1a started for 1646117
=== Container logs for 1646117 ===
  File "/snippet.py", line 76
    print window_words
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1646117 ===
[2025-10-29 12:21:42] INFO: Container 8e49d05960ef93f4e60e203f13f2b06d782d7dc1d40c5427d5211497c4907d1a has stopped
